--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "sync files in wsl2's filesystem to windows's filesystem",
   "main": "main.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -12,12 +13,12 @@
     "wsl"
   ],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@tarojs/service": "^3.0.8"
   },
   "devDependencies": {
-    "shelljs": "^0.8.4",
+    "@types/shelljs": "^0.8.8",
     "typescript": "^4.0.2"
   }
 }
