--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,13 @@
 {
     "compilerOptions": {
-      "target": "ES2017",
-      "module": "commonjs",
-      "removeComments": false,
-      "preserveConstEnums": false,
-      "moduleResolution": "node",
-      "experimentalDecorators": true,
-      "noImplicitAny": false,
-      "allowSyntheticDefaultImports": true,
-      "outDir": "dist",
-      "rootDir": "./src",
-      "noUnusedLocals": true,
-      "noUnusedParameters": true,
-      "strictNullChecks": true,
-      "resolveJsonModule": true,
-      "sourceMap": true,
-      "baseUrl": "."
-    },
-    "include": [
-      "./src"
-    ],
-    "exclude": [
-      "__tests__",
-      "node_modules",
-      "dist",
-      "tests",
-      "jest",
-      "**/*.test.ts",
-      "**/*.spec.ts"
-    ],
-    "compileOnSave": false
-  }
+        "target": "esnext",
+        "module": "commonjs",
+        "moduleResolution": "node",
+        "strict": true,
+        "skipLibCheck": true,
+        "declaration": true,
+        "pretty": true,
+        "newLine": "lf",
+        "outDir": "dist"
+    }
+}
