--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "taro-plugin-sync-in-wsl",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "sync files in wsl2's filesystem to windows's filesystem",
   "main": "main.js",
   "files": [
@@ -19,7 +19,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@tarojs/service": "^3.0.8"
+    "@tarojs/service": "^3.0.8",
+    "shelljs": "^0.8.4"
   },
   "devDependencies": {
     "@types/shelljs": "^0.8.8",
