--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
   "devDependencies": {
     "@types/shelljs": "^0.8.8",
     "typescript": "^4.2.3"
+  },
+  "volta": {
+    "node": "16.15.1",
+    "npm": "8.12.2"
   }
 }
